# aptitude-server

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.bat  skills-lock.json  test_main.http
.agents/: agent.md  history-append-only-manifest.json
.agents/memory/: meta.md
.agents/plans/: 01-foundation-service-skeleton.md  02-immutable-skill-registry.md  03-deterministic-dependency-resolution.md  04-repository-api-contract-v1.md  05-metadata-search-ranking.md  06-policy-conflict-governance.md  07-evaluation-repo-state-reproducibility.md  08-canonical-postgres-storage-finalization.md  08-operability-and-release-readiness.md  09-postgres-content-addressed-artifact-cache.md  09-public-api-simplification-and-contract-freeze.md  10-governance-provenance-and-audit-completion.md  10-hybrid-artifact-storage-and-git-provenance.md  10-operability-and-release-readiness.md  11-discovery-resolution-fetch-service-split.md  11-operability-and-release-readiness.md  13-environment-profiles-and-auth-modes.md  (+7 more)
.deployment/: docker-compose.yml  up.bat  up.sh
.postman/: resources.yaml
alembic/: env.py
app/: README.md  __init__.py  main.py  service_container.py
docs/: README.md  api-contract.md  aptitude-project-high-level-design.md  overview.md  prd.md  repository-prd.md  resolver-prd.md  schema.md  scope.md  storage-strategy.md
postman/: API.postman_collection.json  New Environment.postman_environment.json
scripts/: export_openapi.py
tests/: conftest.py  test-main.http
(+196 files in other folders)
