[project]
name = "aptitude-server"
version = "0.1.0"
description = "aptitude-server foundation service skeleton"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi[standard]==0.135.1",
    "pydantic-settings>=2.11.0",
    "prometheus-client>=0.23.1",
    "psycopg[binary]==3.3.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "starlette>=0.52.1",
    "pydantic-extra-types==2.11.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest==9.0.2",
    "pytest-asyncio>=0.26.0",
    "ruff==0.15.7",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require a running PostgreSQL instance",
    "unit: fast isolated tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["app"]
